--- a/Projects/Styles/overlay_placement.css
+++ b/Projects/Styles/overlay_placement.css
@@ -10,16 +10,6 @@
   z-index: 2;
 }
 
-/* #img-active{
-  position: relative;
-  display: block;
-}
-
-#img-inactive{
-  position: relative;
-  display: block;
-} */
-
 #view-icon-holder {
   margin-left: 20px;
   display: flex;
@@ -60,6 +50,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  scroll-behavior: smooth;
 }
 
 .icon-content {
