--- a/Projects/Styles/overlay_placement.css
+++ b/Projects/Styles/overlay_placement.css
@@ -93,7 +93,7 @@
 }
 
 #space-holder{
-  width: 425px;
+  width: 410px;
   height: 700px;
   border-radius: 30px;
   z-index: inherit;
@@ -102,11 +102,14 @@
 
 #overlay-info-content{
   /* background-color: rgba(0, 0, 33, 0.68); */
-  background-color: #1919387c;
+  background-color: rgba(25, 25, 56, 1);
+  padding-left: 2rem;
+  padding-right: 2rem;
+  padding-top: 2rem;
   -webkit-backdrop-filter: blur(25px);
   backdrop-filter: blur(25px);
   position: absolute;
-  border-radius: 30px;
+  border-radius: 40px;
   /* border: 1px solid white; */
   z-index: 3;
   transition: all 1.5s ease;
