--- a/Projects/Styles/navbar.css
+++ b/Projects/Styles/navbar.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap');
 
 
 .navbar{
@@ -58,5 +58,6 @@
     cursor: pointer;
 }
 #page-routes .active{
+    font-weight: 600;
     color: red;
 }
