--- a/Pages/GlobalAssets/navbar.css
+++ b/Pages/GlobalAssets/navbar.css
@@ -18,11 +18,12 @@
     position: sticky;
     z-index: 100;
     top: 0;
+    -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;
     margin: 15px 50px;
 }
 .navbar > ul {
     display: flex;
-    justify-content: space-evenly;
+    /* justify-content: space-evenly; */
     align-items: center;
 }
 
@@ -57,7 +58,11 @@
 
 .links li{
     color: rgba(180, 180, 180, 0.7);
+    display: inline-block;
     cursor: pointer;
+    min-width: 60px;
+    max-width: 80px;
+    margin-left: 40px;
     font-size: 18px;
     font-weight: 400;
     transition: all 0.4s ease;
