--- a/Pages/GlobalAssets/navbar.css
+++ b/Pages/GlobalAssets/navbar.css
@@ -17,7 +17,7 @@
     width: auto;
     position: sticky;
     z-index: 100;
-    top: 0;
+    top: 1rem;
     -moz-user-select: none; -webkit-user-select: none; -ms-user-select:none; user-select:none;-o-user-select:none;
     margin: 15px 50px;
 }
