--- a/Pages/Home/style.css
+++ b/Pages/Home/style.css
@@ -58,17 +58,25 @@
 .gradient-content{
     width: 100%;
     height: 80%;    
-    background: linear-gradient(92.03deg, rgba(25, 25, 56, 0.63) 42.12%, rgba(245, 25, 25, 0.6237));
+    background: linear-gradient(92.03deg, rgba(25, 25, 56, 0.63) 40.12%, rgba(245, 25, 25, 0.6237));
     display: flex;
 }
+.gradient-content *{
+    background-color: transparent;
+}
+
 .gradient-content > .text-content{
-    padding-left: 1rem;
+    padding-left: 2rem;
+    padding-right: 4rem;
+    padding-top: 2rem;
     width: 50%;
     height: 100%;
 }
 .gradient-content> .image-content{
     width: 50%;
     height: 95%;
+    margin-right: 2rem;
+    border-radius: 1rem;
     display: block;
     object-fit: cover;
     background-color: grey;
@@ -76,10 +84,41 @@
 }
 
 .gradient-content#reverse{
-    background: linear-gradient(92.03deg, rgba(245, 25, 25, 0.6237), rgba(25, 25, 56, 0.63) 42.12%);
+    background: linear-gradient(92.03deg, rgba(245, 25, 25, 0.6237), rgba(25, 25, 56, 0.63) 50.12%);
     flex-direction: row-reverse;
     text-align: end;
 }
 .gradient-content#reverse > .text-content{
-    padding-right: 1rem;
+    padding-right: 2rem;
+    padding-left: 4rem;
+}
+
+.gradient-content#reverse > .image-content{
+    margin-left: 2rem;
+}
+.gradient-content > .text-content > #title{
+    color: #F51919;
+    letter-spacing: 0.4rem;
+    font-size: 2rem;
+    font-weight: 300;
+    text-transform: uppercase;
+}
+.gradient-content > .text-content > #subtitle{
+    margin-top: 1.5rem;
+    color: white;
+    font-size: 2.5rem;
+    font-weight: 400;
+    padding-right: 2rem;
+    padding-left: 0;
+}
+.gradient-content#reverse > .text-content > #subtitle{
+    padding-right: 0;
+    padding-left: 2rem;
+}
+
+.gradient-content > .text-content > #description{
+    color: rgba(255, 255, 255, 0.83);
+    font-size: 1rem;
+    margin-top: 1rem;
+    line-height: 200%;
 }
