--- a/Pages/GlobalAssets/navbar.css
+++ b/Pages/GlobalAssets/navbar.css
@@ -63,7 +63,7 @@
     cursor: pointer;
     font-size: 18px;
     font-weight: 400;
-    transition: all 0.4s ease;
+    transition: color 1s ease-in-out;
 }
 
 .links li.active{
