--- a/Pages/Fleet/styles/layout.css
+++ b/Pages/Fleet/styles/layout.css
@@ -79,7 +79,7 @@
 }
 
 .fleet-info.expanded{
-    left: 4%;
+    left: 10%;
     width: 80%;
 }
 .fleet-info.expanded > #main-state{
@@ -93,6 +93,8 @@
     margin-top: 1rem;
     height: 100%;
     display: flex;
+    align-items: center;
+    justify-content: center;
 }
 #expanded-state > #text-details{
     width: 50%;
@@ -113,12 +115,15 @@
     overflow-y: scroll;
 }
 
-#expanded-state > #graph-details{
+#expanded-state.plane > #graph-details{
     width: 50%;
     height: 100%;
     padding-left: 2rem;
     padding-right: 2rem;
     border-radius: 0 3rem 3rem 0;
+}
+#expanded-state.drone > #graph-details{
+    display: none;
 }
 
 #graph-details > h1{
@@ -129,15 +134,21 @@
     margin-top: 2rem;
     width: 100%;
     height: 40%;
-    background-color: blue;
 }
 
-#graph-details > #graph-toggle{
+#graph-details > #graph-toggle-control-panel{
     margin-top: 1rem;
     display: flex;
+    justify-content: center;
+    align-items: center;
     width: 100%;
     height: 10%;
-    background-color: red;
+}
+
+#graph-toggle-control-panel i{
+    padding: 2rem;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 .fleet-model{
