--- a/Pages/Fleet/styles/layout.css
+++ b/Pages/Fleet/styles/layout.css
@@ -77,8 +77,9 @@
     transition: all 2s ease-in-out;
     position: relative;
     opacity: 1;
-    overflow: scroll;
-    height: 93%;
+    overflow-y: scroll;
+    overflow-x: hidden;
+    height: 92.2%;
 }
 #main-state *{
     margin: auto;
@@ -94,6 +95,8 @@
 }
 #main-state > #body{
     font-weight: 400;
+    height: 45%;
+    overflow-y: scroll;
     margin-top: 1rem;
     font-size: 1.3rem;
 }
