--- a/Pages/Credits/styles/layout.css
+++ b/Pages/Credits/styles/layout.css
@@ -4,8 +4,9 @@
 }
 
 .container.credits > .content > .title-div-extra{
-    height: 60vh;
+    height: 65vh;
     width: 100%;
+    margin: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -13,7 +14,7 @@
 }
 
 .title-div-credits{
-    height: 50vh;
+    height: 55vh;
     display: flex;
     justify-content: space-between;
     flex-direction: row;
@@ -28,14 +29,74 @@
     height: 100%;
     display: flex;
     align-items: center;
+    padding-right: 4rem;
     justify-content: flex-end;
 }
 
 #image-panel-div #image-panel{
-    border: 1px solid white;
     border-radius: 2rem;
-    width: 40%;
+    width: 20rem;
+    position: relative;
+    min-width: 10rem;
+    height: 95%;
+}
+
+#image-panel p{
+    position: absolute;
+    bottom: 1rem;
+    right: 1.5rem;
+    text-transform: uppercase;
+    letter-spacing: 0.2rem;
+    color: #F41919;
+    background-color: transparent;
+    font-weight: bold;
+    z-index: 1;
+    opacity: 0;
+    transition: all 0.5s ease-out;
+}
+
+#image-panel .overlay{
+    background: transparent;
+    position: absolute;
+    z-index: 10;
+    width: 100%;
     height: 100%;
+}
+
+#image-panel:hover > p{
+    opacity: 1;
+    cursor: pointer;
+    z-index: 10;
+}
+
+
+#image-panel:before, #image-panel:after {
+    content: "";
+    position: absolute;
+    border-radius: 2rem;
+    top: 0px;
+    right: 0px;
+    bottom: 0px;
+    left: 0px;
+    opacity: 1;
+}
+#image-panel:before {
+    background: url("../../About/knowMorePage/Assets/Senior Core/gaurav.jpeg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    z-index: 1;
+    transition: opacity 0.5s;
+}
+
+#image-panel:after {
+    background: linear-gradient(181.85deg, rgba(0, 0, 34, 0) -36.84%, rgba(25, 25, 56, 0.7519) -36.58%),
+     url("../../About/knowMorePage/Assets/Senior Core/gaurav.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+#image-panel:hover:before {
+    opacity: 0;
 }
 
 .title-div-credits #title{
@@ -58,10 +119,47 @@
     color:white;
     font-size: 1rem;
     margin-top: 3rem;
+    height: 40%;
+    overflow-y: scroll;
 }
 
 .title-div-extra #bottom-line{
-    background-color: gray;
+    background-color: white;
     width: 40%;
+    border-radius: 1rem;
     height: 0.05rem;
+}
+
+.contributors{
+    margin-top: 2rem;
+    height: 55vh;
+    width: 100%;
+}
+
+.contributors#initial{
+    margin-top: 5rem;
+}
+
+.contributors > #title{
+    color: rgba(245, 25, 25, 1);
+    font-size: 3rem;
+    letter-spacing: 0.59rem;
+    font-weight: bold;
+}
+
+.contributors > .scroll-container{
+    margin-top: 1rem;
+    width: 100%;
+    white-space: nowrap;
+    height: 100%;
+    overflow: scroll;
+}
+.scroll-container > div{
+    display: inline-block;
+    border-radius: 2rem;
+    width: 20%;
+    height: 90%;
+    margin: 1rem;
+    background-color: white;
+    /* margin-right: 5rem; */
 }
