--- a/Pages/Credits/styles/card.css
+++ b/Pages/Credits/styles/card.css
@@ -9,7 +9,7 @@
     transition: all 0.5s ease-out;
 }
 
-.scroll-container div img{
+.scroll-container .credits-card img{
     position: absolute;
     width: 100%;
     height: 100%;
