--- a/Pages/Credits/styles/layout.css
+++ b/Pages/Credits/styles/layout.css
@@ -3,6 +3,14 @@
     padding: 0 3rem;
 }
 
+.container.credits > .content{
+    transition: all 0.5s ease-out;
+}
+
+.container.credits.container.credits.know-more > .content{
+    filter: blur(10px);
+}
+
 .container.credits > .content > .title-div-extra{
     height: 65vh;
     width: 100%;
@@ -58,7 +66,7 @@
 #image-panel .overlay{
     background: transparent;
     position: absolute;
-    z-index: 10;
+    z-index: 1;
     width: 100%;
     height: 100%;
 }
@@ -66,7 +74,7 @@
 #image-panel:hover > p{
     opacity: 1;
     cursor: pointer;
-    z-index: 10;
+    z-index: 1;
 }
 
 
@@ -130,10 +138,18 @@
     height: 0.05rem;
 }
 
-.contributors{
+.container.credits .contributors{
     margin-top: 2rem;
     height: 55vh;
     width: 100%;
+    z-index: 10;
+}
+.container.credits.know-more .contributors{
+    z-index: 5;
+}
+
+.contributors *{
+    z-index: inherit;
 }
 
 .contributors#initial{
@@ -156,7 +172,7 @@
     overflow-x: scroll;
     overflow-y: hidden;
 }
-.scroll-container > div{
+.scroll-container > .credits-card{
     display: inline-block;
     border-radius: 2rem;
     width: 20%;
