--- a/Pages/Credits/styles/card.css
+++ b/Pages/Credits/styles/card.css
@@ -1,7 +1,8 @@
 .scroll-container .expanding-div{
     width: 100%;
     height: 110%;
-    margin-top: 100%;
+    /* margin-top: 100%; */
+    transform: translateY(70%);
     position: relative;
     z-index: 10;
     border-radius: 2rem;
@@ -43,5 +44,6 @@
 }
 
 .scroll-container .expanding-div:hover{
-    margin-top: 0;
+    /* margin-top: 0; */
+    transform: translateY(0%);
 }
