dynamics using js done

--- a/Pages/Credits/styles/card.css
+++ b/Pages/Credits/styles/card.css
@@ -21,6 +21,7 @@
 
 .scroll-container .expanding-div p{
     position: absolute;
+    cursor: pointer;
     background-color: transparent;
 }
 .scroll-container .expanding-div > p:first-child{
