--- a/Pages/Credits/styles/layout.css
+++ b/Pages/Credits/styles/layout.css
@@ -115,7 +115,7 @@
     font-size: 5rem;
     margin-bottom: 0.1rem;
 }
-.title-div-credits .subtitle{
+.title-div-credits #subtitle{
     color:rgba(245, 25, 25, 1);
     font-size: 2rem;
     margin-bottom: 0.5rem;
@@ -172,7 +172,7 @@
 .scroll-container > .credits-card{
     display: inline-block;
     border-radius: 2rem;
-    width: 20%;
+    width: 18%;
     height: 90%;
     position: relative;
     overflow: hidden;
