--- a/Tests/Sponsors/sponsors_style.css
+++ b/Tests/Sponsors/sponsors_style.css
@@ -13,10 +13,10 @@
     top: 10vh;
     /* border: 1px solid red; */
 /*  */
-.sponsors_image:hover {
+/* .sponsors_image:hover {
     opacity: 0.9;
     transform: scale(1.1);
-}
+} */
 .popup_window{
     opacity: 0;
     position: absolute;
@@ -24,8 +24,8 @@
     height: 70vh;
     display: flex;
     flex-direction: row;
-    left:20vw;
-    top:10vh;    
+    left:15%;
+    top:10%;    
     /* background: linear-gradient(105.96deg, rgba(0, 0, 0, 0.8) 1.5%, rgba(196, 196, 196, 0) 100%); */
     background: #000021;
     border: 0.5px solid #FFFFFF;
@@ -54,10 +54,6 @@
     height: 70%;
     top:12%;
     left:2%;  
-
-    /* animation-name:fadeIn;
-    animation-name: zoom; */
-    animation-duration: 0.6s;
 }
 
 .description_container{
@@ -81,20 +77,38 @@
     color: #FFFFFF;
 
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+.active{
+    opacity: 1;
+    z-index: 10;
+    animation : open 1s forwards;
 
-    animation-name: fadeIn;
-    animation-name: zoom;
-    animation-duration: 0.6s;
+}
+.inactive{
+    opacity : 0;
+    z-index: -10;
+}
+@keyframes open {
+    0% {
+        transform:scale(0);
+    }
+    50%{
+        transform:scale(1.2)
+    }
+    70%{
+        transform: scale(0.9)
+    }
+    90%{
+        transform: scale(1.1)
+    }
+    100%{
+        transform: scale(1);
+    }
+}
+#toBeBlur.blur{
+    filter: blur(10px);
+    user-select: none;
+    pointer-events: none;
 }
 
-/* @keyframes zoom {
-    from {transform:scale(0)}
-    to {transform:scale(1)}
-  }
-
-@keyframes fadeIn {
-    from{opacity: scale(0)}
-    to {opacity:scale(1)}
-    
-} */
 
