--- a/Pages/Gallery/styles/layout.css
+++ b/Pages/Gallery/styles/layout.css
@@ -53,8 +53,53 @@
     width: 60%;
     height: 90%;
     background-color: aqua;
+    position: relative;
     border-radius: 2rem;
 }
+.image-main-container #focused-image > img{
+    object-fit: cover;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+    width: 100%;
+    height: 100%;
+    border-radius: 2rem;
+}
+.image-main-container #focused-image > .mini-info{
+    top: 0;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+    border-radius: 2rem;
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.9));
+    opacity: 0;
+    transition: all 0.5s ease-in-out;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    padding-bottom: 2rem;
+    padding-left: 2rem;
+}
+.image-main-container #focused-image > .mini-info > p{
+    background-color: transparent;
+    width: 100%;
+}
+
+.image-main-container #focused-image > .mini-info > .heading{
+    color: red;
+    font-size: 2rem;
+    font-weight: bold;
+}
+
+
+.image-main-container #focused-image > .mini-info:hover{
+    opacity: 1;
+}
+
+
 .image-main-container #all-images-container{
     width: 35%;
     height: 100%;
@@ -71,6 +116,41 @@
 
 #all-images-container .main-container{
     height: 90%;
-    width: 90%;
-    background-color: white;
+    width: 70%;
+    display: flex;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-container .image-card{
+    width: 10rem;
+    height: 10rem;
+    margin: 1rem;
+    z-index: 10;
+    border-radius: 1.5rem;
+}
+
+.main-container .image-card > img{
+    object-fit: cover;
+    display: block;
+    border: 2px solid transparent;
+    width: 10rem;
+    height: 10rem;
+    cursor: pointer;
+    -webkit-user-select: none; /* Safari */
+    -ms-user-select: none; /* IE 10 and IE 11 */
+    user-select: none; /* Standard syntax */
+    z-index: 5;
+    transition: all 0.5s ease-in-out;
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%);
+    border-radius: 1.5rem;
+}
+
+.main-container .image-card.active img{
+    -webkit-filter: grayscale(0%);
+    filter: grayscale(0%);
+    border: 2px solid red;
 }
